--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
         function game() {
             for (let i = 0; i < 5; i++) {
-                let playerSelection = prompt("Please enter your move: ");
+                let playerSelection = prompt("Please enter rock, paper, or scissors: ");
                 let computerSelection = computerPlay();
                 console.log(playRound(playerSelection, computerSelection));
             }
