--- a/index.html
+++ b/index.html
@@ -6,60 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock, Paper, Scissors</title>
 
-    <script>
-        function computerPlay() {
-            let random = Math.floor(Math.random() * 3);
-            if (random == 0) {
-                return "Rock";
-            }
-            else if (random == 1) {
-                return "Paper";
-            }
-            else {
-                return "Scissors";
-            }
-        }
-
-        function playRound(playerSelection, computerSelection) {
-            playerSelection = playerSelection.toLowerCase();
-            computerSelection = computerSelection.toLowerCase();
-
-            if (playerSelection == computerSelection){
-                return "Tie! Both chose " + playerSelection;
-            }
-            else if (playerSelection == "rock" && computerSelection == "scissors"){
-                return "You Win! Rock beats scissors";
-            }
-            else if (playerSelection == "paper" && computerSelection == "rock") {
-                return "You Win! Paaper beats rock";
-            }
-            else if (playerSelection == "scissors" && computerSelection == "paper") {
-                return "You Win! Scissors beats paper";
-            }
-            else if (playerSelection == "rock" && computerSelection == "paper") {
-                return "You Lose! Paper beats rock";
-            }
-            else if (playerSelection == "paper" && computerSelection == "scissors") {
-                return "You Lose! Scissors beats paper";
-            }
-            else if (playerSelection == "scissors" && computerSelection == "rock") {
-                return "You Lose! Rock beats scissors";
-            }
-        }
-
-        function game() {
-            for (let i = 0; i < 5; i++) {
-                let playerSelection = prompt("Please enter rock, paper, or scissors: ");
-                let computerSelection = computerPlay();
-                console.log(playRound(playerSelection, computerSelection));
-            }
-        }
-
-        game();
-
-    </script>
+    <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <div>Rock, Paper, Scissors</div>
+    <div>Beat the computer 5 times to win!</div>
+    <button id="rock">ROCK</button>
+    <button id="paper">PAPER</button>
+    <button id="scissors">SCISSORS</button>
 </body>
 </html>
