--- a/index.html
+++ b/index.html
@@ -10,19 +10,18 @@
 </head>
 <body>
     <h1>Rock, Paper, Scissors</h1>
-    <h3>Beat the computer 5 times to win!</h3>
+    <h3>First to 5 wins!</h3>
 
-    <div id="result"></div>
     <div id="scores">
         <div id="playerScore">Player: 0</div>
         <div id="computerScore">Computer: 0</div>
     </div>
 
     <div class="buttons">
-        <button id="rock">ROCK</button>
-        <button id="paper">PAPER</button>
-        <button id="scissors">SCISSORS</button>
+        <button id="rock" class="inplay"><img src="./images/rock.png" alt="rock"></button>
+        <button id="paper" class="inplay"><img src="./images/paper.png" alt="paper"></button>
+        <button id="scissors" class="inplay"><img src="./images/scissors.png" alt="scissors"></button>
     </div>
-    
+    <div id="result"></div>
 </body>
 </html>
